--- a/Typing Effect/index.html
+++ b/Typing Effect/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="main">
-        <h1> Hi I make <span class="txt-type" data-wait="3000" data-words='["Developer","Designer", "Creator"]'></span>
+        <h1> Hi I am <span class="txt-type" data-wait="3000" data-words='["Developer","Designer", "Creator"]'></span>
         </h1>
 
     </div>
