TypinEffect is done with ES 6.

--- a/Typing Effect/index.html
+++ b/Typing Effect/index.html
@@ -16,7 +16,8 @@
 <body>
 
     <div class="main">
-        <h1> Hi I am <span class="txt-type" data-wait="3000" data-words='["Developer","Designer", "Creator"]'></span>
+        <h1> Hi I am <span class="txt-type txt" data-wait="3000"
+                data-words='["Developer","Designer", "Creator"]'></span>
         </h1>
 
     </div>
