getting data from json through given ID is written.

--- a/Timer/main.html
+++ b/Timer/main.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <button data-time="20" class="timerButton"> 20 Secs</button>
-    <button data-time="300" class="timerButton"> Study 5</button>
+    <button id="testid" data-time="20" class="timerButton"> 20 Secs</button>
+    <button id="secondid" data-time="300" class="timerButton"> Study 5</button>
     <button data-time="900" class="timerButton"> Study 15</button>
     <button data-time="1200" class="timerButton"> Study 20</button>
 
